stay details fix layout problem

--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -139,8 +139,7 @@
 .mid-section {
     padding-block-end: 3rem;
     max-width: 1120px;
-    display: grid;
-    grid-template-columns: 4fr 3fr;
+    
 
     .about-host {
         display: grid;
